<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp">

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:src="@drawable/profile_circle" />

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"

                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:elevation="5dp"
                            android:src="@mipmap/ic_launcher"
                            android:visibility="visible" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"

                    android:paddingHorizontal="10dp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imgArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="Trading Experience"

                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/eTxperience"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:clickable="true"
                            android:cursorVisible="false"
                            android:editable="false"

                            android:focusable="false"
                            android:hint="@string/select_experience"
                            android:paddingVertical="8dp"

                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_weight="1"

                        android:orientation="vertical"
                        android:paddingVertical="4dp"
                        android:paddingStart="8dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/enter_first_name"
                            
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/etFirstName"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/enter_first_name"
                            android:inputType="textCapWords"
                            android:singleLine="true"
                            android:text="Adnjks"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_weight="1"

                        android:orientation="vertical"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/last_name"

                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/etLastName"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/enter_your_last_name"
                            android:inputType="textCapWords"
                            android:singleLine="true" />

                    </LinearLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                   
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/email"
                        
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/etEmail"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                         />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                   
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/phone_number"
                        
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

<!--                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker-->
<!--                            android:id="@+id/ccp1"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:layout_marginStart="@dimen/dp_6"-->
<!--                            app:ccp_arrowSize="0dp"-->
<!--                            app:ccp_hideNameCode="true"-->
<!--                            app:ccp_hidePhoneCode="false"-->
<!--                            app:ccp_setCountryByTimeZone="true"-->
<!--                            app:ccp_showFlag="false"-->
<!--                            app:ccp_showFullName="false"-->
<!--                            app:ccp_textSize="16sp" />-->

                        <EditText
                            android:id="@+id/etPhone"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:background="@android:color/transparent"
                            android:hint="@string/enter_your_phone_number"
                            android:inputType="number"
                            android:maxLength="10"
                             />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                   
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:id="@+id/imgCalendar"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/date_of_birth"
                            
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvDob"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/select_your_date_of_birth"
                             />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llTop"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="2dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:text="@string/save_changes"
                    android:textAllCaps="false" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>